# nmea_lib

./: .travis.yml  CMakeLists.txt  LICENSE.md  README  README.md  _clang-format  package.xml
include/nmea_lib/: avr_fix_quality.hpp  nmea_parser.hpp
src/: CMakeLists.txt  gga_fix_quality.hpp  nmea_builder.cpp  nmea_builder.hpp  nmea_parser.cpp  nmea_parser.hpp
test/: nmea_builder_utest.cpp  nmea_parser_utest.cpp
